# mes1

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.serena/: project.yml
.serena/memories/: project_overview.md
config/: settings.yaml
eda/: sp500.py  sp500feature.py
qualifiers/: __init__.py  adjusted_returns.py  drawdown_days.py  gold_adjusted.py  inflation_adjusted.py  moving_average.py
scripts/: build_daily_rnd_surface.py  debug_chain.py  fetch_eod_es_chain.py
src/es_options/: __init__.py
src/es_options/config/: __init__.py  loader.py
src/es_options/data_sources/: __init__.py  base_client.py  eod_client.py
src/es_options/io/: __init__.py  file_store.py
src/es_options/metrics/: __init__.py  rnd_extractor.py
src/es_options/pipelines/: __init__.py  build_rnd_pipeline.py
src/es_options/processing/: __init__.py  arbitrage_checks.py  chain_cleaner.py  smoothing.py
src/es_options/utils/: __init__.py  math_utils.py  time_utils.py
src/es_options/viz/: __init__.py  diagnostics_plotter.py  rnd_surface_plotter.py
